Added notes in tools.

--- a/tools/001-line-breaks-remover/index.html
+++ b/tools/001-line-breaks-remover/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<div class="boot">
-		<h1>Line Breaks Remover | Remove Line Breaks Online</h1>
+		<h1>Remove Line Breaks Online - Line Breaks Remover</h1>
 		<div class="row mb-3">
 			<div class="col-sm-12">
 				<h2>Removing line breaks from a text</h2>
@@ -55,6 +55,14 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="notes">
+			<p>
+				Send me your feedback about the <strong>Line Breaks Remover</strong> and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>text tool</strong>. Also, let me know if you have some need about other different <strong>text tool</strong> or <strong>coding tool set</strong>.
+			</p>
+			<p>
+				You can learn about how this online tool works or contribute improving the Line Breaks Remover by programming some new feature or fixing bugs. Fot that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/001-line-breaks-remover" target="_blank">Github >> Line Breaks Remover</a> and make a pull request. Thanks a lot!
+			</p>
 		</div>
 	</div>
 	<script>
