--- a/tools/002-html-list-generator/index.html
+++ b/tools/002-html-list-generator/index.html
@@ -135,11 +135,14 @@
                 </div>
             </div>
             <div class="notes">
-                Send me your feedback about the <strong>HTML List Generator</strong> and let me know if you have some
-                specific need, then I can implement this new feature to you and improve this <strong>text
-                    tools</strong>. Also, let me know if you have some need about other different <strong>text
-                    tool</strong> or <strong>coding tool set</strong>.
+                <p>
+                    Send me your feedback about the <strong>HTML List Generator</strong> and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>html tool</strong>. Also, let me know if you have some need about other different <strong>text tool / HTML tool</strong> or <strong>coding tool set</strong>.
+                </p>
+                <p>
+                    You can learn about how this online tool works or contribute improving the HTML List Generator by programming some new feature or fixing bugs. Fot that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/002-html-list-generator" target="_blank">Github >> HTML List Generator</a> and make a pull request. This will be greate!
+                </p>
             </div>
+
         </div>
     </div>
     <script>
