Chenged name folder and title of Line Breaks Remover to Remove Line Breaks Online; removed unused CSS styles.

--- a/tools/001-remove-line-breaks-online/index.html
+++ b/tools/001-remove-line-breaks-online/index.html
@@ -8,23 +8,19 @@
 		content="Esta aplicação remove os espaços ENTER de um texto, deixando todo o texto em uma única linha. Isto pode ser útil, por exemplo, para quando se quer copiar texto de um PDF.">
 	<meta name="keywords" content="remove, break, line, text, html">
 	<meta name="author" content="Dante Marinho">
-	<title>Break Line Remover | Remove Break Lines Online and Transform Text</title>
+	<title>Remove Break Lines Online</title> <!-- Break Line Remover | Remove Break Lines Online and Transform Text -->
 	<link rel="stylesheet" href="../shared/css/boot.min.css">
 	<link rel="stylesheet" href="../shared/css/styles.css">
 </head>
 
 <body>
 	<div class="boot">
-		<h1>Remove Line Breaks Online - Line Breaks Remover</h1>
+		<h1>Remove Line Breaks Online</h1>
 		<div class="row mb-3">
 			<div class="col-sm-12">
 				<h2>Removing line breaks from a text</h2>
 				<p>
-					<strong>Remove line breaks</strong> from a text with this <strong>online text tool</strong>, leaving
-					all
-					text on a single line. This can be useful, for example, when you want to copy text from a PDF, which
-					when
-					pasting, this text has line breaks where it should have followed the text.
+					<strong>Remove line breaks online</strong> from text using this <strong>text tool</strong>, leaving all text on a single line. This can be useful, for example, when you want to copy text from a PDF, which when pasting, this text has line breaks where it should have followed the text.
 				</p>
 			</div>
 		</div>
@@ -34,8 +30,7 @@
 				<input type="text" id="input" onClick="this.select();">
 			</div>
 			<div class="col-sm-12">
-				<button id="btn-remove-lines" class="btn btn-success" onclick="applyRemovingLines()">Remove line
-					breaks</button>
+				<button id="btn-remove-lines" class="btn btn-success" onclick="applyRemovingLines()">Remove line breaks</button>
 			</div>
 		</div>
 
@@ -58,10 +53,10 @@
 		</div>
 		<div class="notes">
 			<p>
-				Send me your feedback about the <strong>Line Breaks Remover</strong> and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>text tool</strong>. Also, let me know if you have some need about other different <strong>text tool</strong> or <strong>coding tool set</strong>.
+				Send me your feedback about this tool to help to <strong>remove line breaks online</strong> and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>text tool</strong>. Also, let me know if you have some need about other different <strong>text tool</strong> or <strong>coding tool set</strong>.
 			</p>
 			<p>
-				You can learn about how this online tool works or contribute improving the Line Breaks Remover by programming some new feature or fixing bugs. Fot that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/001-line-breaks-remover" target="_blank">Github >> Line Breaks Remover</a> and make a pull request. Thanks a lot!
+				You can learn about how this online tool works or contribute improving the line breaks remover by programming some new feature or fixing bugs. Fot that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/001-line-breaks-remover" target="_blank">Github >> Remove Line Breaks Online</a> and make a pull request. Thanks a lot!
 			</p>
 		</div>
 	</div>
