--- a/tools/002-html-list-generator/index.html
+++ b/tools/002-html-list-generator/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="boot.css">
+    <!-- <link rel="stylesheet" href="boot.css"> -->
+    <link rel="stylesheet" href="../shared/css/boot.min.css">
+	<link rel="stylesheet" href="../shared/css/styles.css">
     <title>HTML List Generator | HTML Converter to convert text to HTML</title>
     <style>
-        textarea,
+        /* textarea,
         input {
             width: 100%;
         }
@@ -55,7 +57,7 @@
         .boot .show-tooltip {
             visibility: visible !important;
             opacity: 1 !important;
-        }
+        } */
     </style>
 </head>
 
