--- a/tools/002-html-list-generator/index.html
+++ b/tools/002-html-list-generator/index.html
@@ -7,58 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="boot.css"> -->
     <link rel="stylesheet" href="../shared/css/boot.min.css">
-	<link rel="stylesheet" href="../shared/css/styles.css">
+    <link rel="stylesheet" href="../shared/css/styles.css">
     <title>HTML List Generator | HTML Converter to convert text to HTML</title>
-    <style>
-        /* textarea,
-        input {
-            width: 100%;
-        }
-
-        .boot .custom-tooltip {
-            position: relative;
-            display: inline-block;
-        }
-
-        .boot .custom-tooltip .tooltiptext {
-            visibility: hidden;
-            width: 200px;
-            background-color: #555;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px;
-            position: absolute;
-            z-index: 1;
-            bottom: 150%;
-            left: 50%;
-            margin-left: -75px;
-            opacity: 0;
-            transition: opacity 0.3s;
-            text-transform: initial;
-        }
-
-        .boot .custom-tooltip .tooltiptext::after {
-            content: "";
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: #555 transparent transparent transparent;
-        }
-
-        .boot .custom-tooltip:hover .tooltiptext {
-            visibility: visible;
-            opacity: 1;
-        }
-
-        .boot .show-tooltip {
-            visibility: visible !important;
-            opacity: 1 !important;
-        } */
-    </style>
 </head>
 
 <body>
@@ -66,9 +16,10 @@
         <div class="container-fluid">
             <h2>About the HTML List Generator</h2>
             <p>
-                <strong>HTML List Generator</strong> is a <strong>HTML converter online tool</strong> that
-                <strong>converts text to html list</strong>. Using this tool will
-                help you convert some text list and transform it to a unordered or ordered HTML list.
+                <strong>HTML List Generator</strong> is an <strong>HTML converter online tool</strong> that
+                <strong>converts text to html list</strong> and others <strong>text list formats</strong>. Using this tool will
+                help you convert some text list and transform it to a unordered or ordered HTML list, as well these text list formats:
+                text separated by lines, spaces, commas, semicolons and some other custom symbols you want to use.
             </p>
             <div class="row mb-3">
                 <div class="col-12">
@@ -77,7 +28,6 @@
                         placeholder="Insert a plain text here to convert it to a HTML list."></textarea>
                 </div>
             </div>
-            <p class="help-text">Options:</p>
             <div class="row">
                 <div class="col-md-5 col-sm-12 mb-3">
                     <h3>Input text options</h3>
@@ -103,13 +53,64 @@
                 <div class="col-md-7 col-sm-12">
                     <h3>Output List type options</h3>
                     <div class="custom-control custom-radio">
-                        <input type="radio" id="radio5" name="list-type" value="unordered" class="custom-control-input"
-                            checked>
+                        <input type="radio" id="radio5" name="list-type" value="ul" class="custom-control-input"
+                            onclick="toggleCustomInput(false)" checked>
                         <label class="custom-control-label" for="radio5">Unordered list</label>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input type="radio" id="radio6" name="list-type" value="ordered" class="custom-control-input">
+                        <input type="radio" id="radio6" name="list-type" value="ol" class="custom-control-input"
+                            onclick="toggleCustomInput(false)">
                         <label class="custom-control-label" for="radio6">Ordered list</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input type="radio" id="radio7" name="list-type" value="lines" class="custom-control-input"
+                            onclick="toggleCustomInput(false)">
+                        <label class="custom-control-label" for="radio7">Lines</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input type="radio" id="radio8" name="list-type" value="commas" class="custom-control-input"
+                            onclick="toggleCustomInput(false)">
+                        <label class="custom-control-label" for="radio8">Commas</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input type="radio" id="radio9" name="list-type" value="semicolons" class="custom-control-input"
+                            onclick="toggleCustomInput(false)">
+                        <label class="custom-control-label" for="radio9">Semicolons</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input type="radio" id="radio10" name="list-type" value="spaces" class="custom-control-input"
+                            onclick="toggleCustomInput(false)">
+                        <label class="custom-control-label" for="radio10">Spaces</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input type="radio" id="radio11" name="list-type" value="custom" class="custom-control-input"
+                            onclick="toggleCustomInput(true)">
+                        <label class="custom-control-label" for="radio11">Custom</label>
+                    </div>
+                    <div class="custom-control" style="width: 50%;">
+                        <input type="text" id="custom" placeholder="Insert a custom symbol" class="none">
+                    </div>
+
+                    <h3>Output extra options</h3>
+                    <!-- Wrap in quotes -->
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="wrap-in-quotes"
+                            onchange="toggleQuotes()">
+                        <label class="custom-control-label" for="wrap-in-quotes">Wrap the words in quotes</label>
+                        
+                        <div id="quote-options" class="none">
+                            <div class="custom-control custom-radio">
+                                <input type="radio" id="doble-quotes" name="quotes" value="doble"
+                                class="custom-control-input">
+                                <label class="custom-control-label" for="doble-quotes">Doble quotes</label>
+                            </div>
+                            <div class="custom-control custom-radio">
+                                <input type="radio" id="single-quotes" name="quotes" value="single"
+                                class="custom-control-input">
+                                <label class="custom-control-label" for="single-quotes">Single quotes</label>
+                            </div>
+                        </div>
+                        <span class="help-text">Works only with lines, commas, semicolons and spaces</span>
                     </div>
                 </div>
             </div>
@@ -127,34 +128,75 @@
             </div>
             <div class="row mb-3">
                 <div class="col-12">
-                    <div class="custom-tooltip">
-                        <button class="btn btn-secondary" onclick="copyToClipboard()" onmouseout="tooltipFunction()"
+                    <div class="inline-flex">
+                        <button class="btn btn-secondary mr-2" onclick="copyToClipboard()"
                             area-label="Copy the output to clipboard">
-                            <span id="myTooltip" class="tooltiptext">Copy to clipboard</span>
                             Copy to clipboard
                         </button>
+                        <div id="check" class="none">
+                            <!-- <img src="../shared/img/check.png" alt="Image check (action applyed)"> -->
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="notes">
+            <div class="more-notes">
                 <p>
-                    Send me your feedback about the <strong>HTML List Generator</strong> and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>html tool</strong>. Also, let me know if you have some need about other different <strong>text tool / HTML tool</strong> or <strong>coding tool set</strong>.
+                    Notes: <br>
+                    The output text list options are generated with a space after the separator symbol. You can use the custom option to generate that output only with symbols without spaces.
                 </p>
                 <p>
-                    You can learn about how this online tool works or contribute improving the HTML List Generator by programming some new feature or fixing bugs. Fot that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/002-html-list-generator" target="_blank">Github >> HTML List Generator</a> and make a pull request. This will be greate!
+                    Example: type comma (,) on custom option and will be generated a list like (banana,apple,blueberry).
                 </p>
             </div>
-
+            <div class="notes">
+                <div class="image"></div>
+                <div class="message">
+                    <p>
+                        Send me your feedback about the <strong>HTML List Generator</strong> and let me know if you have
+                        some specific need, then I can implement this new feature to you and improve this <strong>html
+                            tool</strong>. Also, let me know if you have some need about other different <strong>text
+                            tool / HTML tool</strong> or <strong>coding tool set</strong>.
+                            <br>
+                        You can learn about how this online tool works or contribute improving the HTML List Generator
+                        by programming some new feature or fixing bugs. For that, go to Github on <a
+                            href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/002-html-list-generator"
+                            target="_blank">Github >> HTML List Generator</a> and make a pull request. This will be
+                        great!
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <script>
+        function toggleCustomInput(showCustomInput) {
+            if (showCustomInput) {
+                document.getElementById('custom').classList.remove('none');
+            } else {
+                document.getElementById('custom').classList.add('none');
+            }
+        }
+
+        function toggleQuotes() {
+            console.log('clicou no chekbox');
+            
+            let quoteOption = document.getElementById('wrap-in-quotes');
+            if (quoteOption.checked) {
+                document.getElementById('quote-options').classList.remove('none');
+                document.getElementById('doble-quotes').checked = true;
+            } else {
+                document.getElementById('quote-options').classList.add('none');
+            }
+        }
+
         function convertToList() {
+            let input = document.getElementById('input').value;
+            let textOrigin = document.querySelector('input[name="text-origin"]:checked').value;
+            let listType = document.querySelector('input[name="list-type"]:checked').value;
+            let listTypeCustom = ''
+            let quotes = ''
 
-            var input = document.getElementById('input').value;
-            var textOrigin = document.querySelector('input[name="text-origin"]:checked').value;
-            var listType = document.querySelector('input[name="list-type"]:checked').value;
-
-            var separator = '';
+            // Input sepearator
+            let separator = '';
             if (textOrigin == 'lines') {
                 separator = '\n';
             } else if (textOrigin == 'commas') {
@@ -165,52 +207,83 @@
                 separator = ' ';
             }
 
-            if (listType == 'unordered') {
-                listType = 'ul';
-            } else {
-                listType = 'ol';
+            // Get quote type
+            if (document.getElementById('wrap-in-quotes').checked) {
+                checkboxQuotes = document.querySelector('input[name="quotes"]:checked').value;
+                if (checkboxQuotes == 'doble')
+                {
+                    quotes = '"'
+                } else {
+                    quotes = '\''
+                }
             }
 
-            var lines = input.split(separator);
+            let lines = input.split(separator);
+            let output = '';
 
-            output = `<${listType}>\n`;
-            lines.forEach(e => {
-                output += `    <li>${e.trim()}</li>\n`
-            });
-            output += `</${listType}>`
+            if (listType == 'ul' || listType == 'ol') {
+                output = `<${listType}>\n`;
+                lines.forEach(e => {
+                    output += `    <li>${e.trim()}</li>\n`
+                });
+                output += `</${listType}>`
+            } else {
+
+                if (listType == 'commas') {
+                    listType = ','
+                } else if (listType == 'semicolons') {
+                    listType = ';'
+                } else if (listType == 'custom') {
+                    listTypeCustom = document.getElementById('custom').value;
+                }
+
+                lines.forEach(term => {
+
+                    // Apply the quotes if exists
+                    term = quotes + term.trim() + quotes;
+
+                    if (listType == 'lines') {
+                        output += `${term}\n`;
+                    } else if (listType == 'spaces') {
+                        output += `${term} `;
+                    } else if (listType == 'custom') {
+                        output += term + listTypeCustom;
+                    } else if (listType == ',' || listType == ';') {
+                        output += `${term}${listType} `;
+                    }
+                });
+            }
+
+            // Remove the last symbol
+            if (listType == 'lines' || listType == 'spaces') {
+                output = output.substring(0, output.length - 1);
+            } else if (listType == ',' || listType == ';') {
+                output = output.substring(0, output.length - 2);
+            } else if (listType == 'custom') {
+                output = output.substring(0, output.length - listTypeCustom.length);
+            }
+
             document.getElementById('output').value = output;
             copyToClipboard();
-            showTooltip();
         }
 
         function copyToClipboard() {
-            var copyText = document.getElementById("output");
+            let copyText = document.getElementById("output");
             copyText.select();
             copyText.setSelectionRange(0, 99999);
             document.execCommand("copy");
 
-            var tooltip = document.getElementById("myTooltip");
-            tooltip.innerHTML = "Copied to clipboard";
-            // tooltip.innerHTML = "Copied: " + copyText.value;
-        }
-
-        function tooltipFunction() {
-            var tooltip = document.getElementById("myTooltip");
-            tooltip.innerHTML = "Copy to clipboard";
-        }
-
-        function showTooltip() {
-            var tooltip = document.getElementById("myTooltip");
-            tooltip.innerHTML = "Was copied to clipboard";
-            tooltip.classList.add('show-tooltip');
+            let check = document.getElementById("check");
+            check.classList.remove('none');
             setTimeout(() => {
-                tooltip.classList.remove('show-tooltip');
+                check.classList.add('none');
             }, 3000);
         }
 
         // https://stackoverflow.com/questions/3547035/javascript-getting-html-form-values
         // https://stackoverflow.com/questions/9618504/how-to-get-the-selected-radio-button-s-value
         // https://getbootstrap.com/docs/4.3/components/forms/
+        // https://html.form.guide/html-form/html-checkbox-events.html
     </script>
 </body>
 
