--- a/tools/001-remove-line-breaks-online/index.html
+++ b/tools/001-remove-line-breaks-online/index.html
@@ -11,93 +11,96 @@
 	<title>Remove Break Lines Online</title> <!-- Break Line Remover | Remove Break Lines Online and Transform Text -->
 	<link rel="stylesheet" href="../shared/css/boot.min.css">
 	<link rel="stylesheet" href="../shared/css/styles.css">
+	<!-- Icons Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-	<div class="boot">
-		<h1>Remove Line Breaks Online</h1>
-		<div class="row mb-3">
-			<div class="col-sm-12">
-				<h2>Removing line breaks from a text</h2>
-				<p>
-					<strong>Remove line breaks online</strong> from text using this <strong>text tool</strong>, leaving all text on a single line. This can be useful, for example, when you want to copy text from a PDF, which when pasting, this text has line breaks where it should have followed the text.
-				</p>
+	<h1>Remove Line Breaks Online</h1>
+	<div class="box-container">
+		<div class="boot">
+			<div class="row mb-3">
+				<div class="col-sm-12">
+					<h2>Removing line breaks from a text</h2>
+					<p>
+						<strong>Remove line breaks online</strong> and multiple whitespaces from text using this <strong>text tool</strong>, leaving all text on a single line. This can be useful, for example, when you want to copy text from a PDF, which when pasting, this text has line breaks where it should have followed the text.
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12 mb-3">
-				<h3>Input your text</h3>
-				<textarea id="input" class="materialize-textarea" rows="7" onClick="this.select();" placeholder="Insert a plain text here to convert it to a HTML list."></textarea>
-				<span class="help-text">Just press Ctrl + Enter to remove line breaks.</span>
+			<div class="row">
+				<div class="col-sm-12 mb-3">
+					<h3>Input your text</h3>
+					<textarea id="input" class="materialize-textarea" rows="7" onClick="this.select();" placeholder="Insert a text to remove line breaks"></textarea>
+					<span class="help-text">Just press Ctrl + Enter to remove line breaks.</span>
+					<button id="btn-remove-lines" class="btn btn-success mt-3" onclick="applyRemovingLines()"><i class="fa fa-chevron-right"></i> Remove line breaks</button>
+				</div>
 			</div>
-			<div class="col-sm-12">
-				<button id="btn-remove-lines" class="btn btn-success" onclick="applyRemovingLines()" area-label="Button to remove line breaks from text">Remove line breaks</button>
-			</div>
-		</div>
-
-		<div class="row mb-3">
-			<div class="col-sm-12 mb-3">
-				<h3>Output text</h3>
-				<textarea id="output" id="" cols="30" rows="10"></textarea>
-			</div>
-			<div class="col-sm-12">
-				<div class="inline-flex">
-					<button class="btn btn-secondary mr-2" onclick="copyToClipboard()"
-						area-label="Copy the output to clipboard">
-						Copy to clipboard
-					</button>
-					<div id="check" class="none">
-						<!-- <img src="../shared/img/check.png" alt="Image check (action applyed)"> -->
+			<div class="row mb-3">
+				<div class="col-sm-12 mb-3">
+					<h3>Output text</h3>
+					<textarea id="output" class="mb-2" cols="30" rows="7"></textarea>
+					<div class="inline-flex">
+						<div class="div-btn mr-1" onclick="copyToClipboard()" title="Copy output to clipboard">
+							<i class="fa fa-copy"></i>
+							Copy to clipboard
+						</div>
+						<div id="check" class="none"></div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="notes">
-			<div class="image"></div>
-            <div class="message">
-				<p>
-					Send me your feedback about this tool to help to <strong>remove line breaks online</strong> and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>text tool</strong>. Also, let me know if you have some need about other different <strong>text tool</strong> or <strong>coding tool set</strong>.
-				</p> 
-				<p>
-					You can learn about how this online tool works or contribute improving the line breaks remover by programming some new feature or fixing bugs. For that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/001-remove-line-breaks-online" target="_blank" rel="noopener noreferrer">Github &gt;&gt; Remove Line Breaks Online</a> and make a pull request. Thanks a lot!
-				</p> 
+
+			<h2>Hidden actions</h2>
+
+			<p>This tool was implemented to facilitate the work of those who are translating several pieces of text and need to remove unwanted break lines.</p>
+			<p>First, when clicking on the input box, a function is triggered to select all the text in this box, so you only need to do Ctrl+V to paste the text to remove line breaks.</p>
+			<p>Second, press Ctrl+Enter and the text will be immediately changed by removing the line breaks and will already be copied to the clipboard.</p>
+
+			<div class="notes">
+				<div class="image"></div>
+				<div class="message">
+					<p>
+						Send me your feedback about this tool to help to <strong>remove line breaks</strong> through this online application and let me know if you have some specific need, then I can implement this new feature to you and improve this <strong>text tool</strong>. Also, let me know if you have some need about other different <strong>text tool</strong> or <strong>coding tool set</strong>.
+					</p> 
+					<p>
+						You can learn about how this online tool works or contribute improving the Line Breaks Remover by programming some new feature or fixing bugs. For that, go to Github on <a href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/001-remove-line-breaks-online" target="_blank" rel="noopener noreferrer">Github &gt;&gt; Remove Line Breaks Online</a> and make a pull request. Thanks a lot!
+					</p> 
+				</div>
 			</div>
 		</div>
-		</div>
-	</div>
-	<script>
-		// Listener to remove break lines
-		document.onkeyup = function (e) {
-			if (e.ctrlKey && e.which === 13) {
-				applyRemovingLines();
+		<script>
+			// Listener to remove break lines
+			document.onkeyup = function (e) {
+				if (e.ctrlKey && e.which === 13) {
+					applyRemovingLines();
+				}
 			}
-		}
-
-		function applyRemovingLines() {
-			let input = document.getElementById('input').value;
-			let output = document.getElementById('output');
-			input = input.replace(/\s+/g, ' ').trim();
-			output.value = input;
-			copyToClipboard();
-		}
-
-		function copyToClipboard() {
-			let copyText = document.getElementById("output");
-			copyText.select();
-			copyText.setSelectionRange(0, 99999);
-			document.execCommand("copy");
-
-			let check = document.getElementById("check");
-			check.classList.remove('none');
-			setTimeout(() => {
-				check.classList.add('none');
-			}, 3000);
-		}
-
-		// Help links:
-		// https://stackoverflow.com/questions/10965433/regex-replace-multi-line-breaks-with-single-in-javascript
-		// https://medium.com/@melwinalm/crcreating-keyboard-shortcuts-in-javascripteating-keyboard-shortcuts-in-javascript-763ca19beb9e
-	</script>
+	
+			function applyRemovingLines() {
+				let input = document.getElementById('input').value;
+				let output = document.getElementById('output');
+				input = input.replace(/\s+/g, ' ').trim();
+				output.value = input;
+				copyToClipboard();
+			}
+	
+			function copyToClipboard() {
+				let copyText = document.getElementById("output");
+				copyText.select();
+				copyText.setSelectionRange(0, 99999);
+				document.execCommand("copy");
+	
+				let check = document.getElementById("check");
+				check.classList.remove('none');
+				setTimeout(() => {
+					check.classList.add('none');
+				}, 3000);
+			}
+	
+			// Help links:
+			// https://stackoverflow.com/questions/10965433/regex-replace-multi-line-breaks-with-single-in-javascript
+			// https://medium.com/@melwinalm/crcreating-keyboard-shortcuts-in-javascripteating-keyboard-shortcuts-in-javascript-763ca19beb9e
+		</script>
+	</div><!-- end box-container -->
 
 </body>
 
