Improved CSV to JSON Converter Tools: added option to ignore some fields.

--- a/tools/004-case-converter/index.html
+++ b/tools/004-case-converter/index.html
@@ -82,7 +82,8 @@
                 <p>In this case converter tool you'll find these following case type functions:</p>
                 <h3 class="case-name">Lowercase converter</h3>
                 <p class="lead">
-                    <strong>Lowercase converter</strong> is a function that converts the letters of a text to
+                    <strong><a href="https://www.imediacto.com/tools/text-tools/lowercase-converter/">Lowercase
+                            converter</a></strong> is a function that converts the letters of a text to
                     <strong>lowercase letters</strong>. You can convert from <strong>uppercase to lowercase</strong> or
                     from any other text case types. When letter is already in lowercase, it will remain in that
                     format.<br />
@@ -91,7 +92,8 @@
                 <hr>
                 <h3 class="case-name">Uppercase converter</h3>
                 <p class="lead">
-                    <strong>Uppercase converter</strong> converts the letters of a text <strong>to
+                    <strong><a href="https://www.imediacto.com/tools/text-tools/uppercase-converter/">Uppercase
+                            converter</a></strong> converts the letters of a text <strong>to
                         uppercase</strong>, also known as ALL CAPS format case. You can convert from <strong>lowercase
                         to
                         uppercase</strong> or from any other text case types. When letter is already capitalized, it
@@ -113,8 +115,8 @@
                     and keeps or converts the remaining letters of all words in the sentence to lowercase letters. Each
                     sentence separation is based on the
                     following symbols: dot (.), exclamation (!), interrogation (?) and ellipsis (...).<br /><span
-                        class="ex">Example:</span> "Hi! I'm
-                    mary and i like programming in javascript language. And you?""
+                        class="ex">Example:</span> "Hi! I'm mary and i like programming in javascript language. And
+                    you?".
                 </p>
                 <hr>
                 <h3 class="case-name">Case inverter</h3>
@@ -122,7 +124,7 @@
                     The case inverter reverses the case of each letter of the text. When the algorithm finds a
                     lowercase letter it converts to uppercase, and when it finds a lowercase letter it converts to
                     lowercase.<br /><span class="ex">Example:</span> for the text "Change case of tExt IS so funnY!",
-                    the result will be "cHANGE CASE OF TeXT is SO FUNNy!"
+                    the result will be "cHANGE CASE OF TeXT is SO FUNNy!".
                 </p>
             </div>
             <div class="notes">
@@ -135,12 +137,13 @@
                         let
                         me know if you have some need about other different <strong>text tool</strong> or <strong>coding
                             tool set</strong>.
-                        <!-- <br>
+                    </p>
+                    <p>
                         You can learn about how this online tool works or contribute improving the Case Converter
                         by programming some new feature or fixing bugs. For that, go to Github on <a
-                            href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/002-html-list-generator"
+                            href="https://github.com/dantovsky/Imediacto-Online-Tool-Set/tree/master/tools/004-case-converter"
                             target="_blank">Github >> Case Converter</a> and make a pull request. This will be
-                        great! -->
+                        great!
                     </p>
                 </div>
             </div>
@@ -240,13 +243,6 @@
             window.onload = function () {
                 wordCount(1000000);
             }
-
-        // https://love2dev.com/blog/javascript-touppercase-tolowercase/
-        // https://danielmiessler.com/blog/a-list-of-different-case-types/
-        // https://flaviocopes.com/how-to-uppercase-first-letter-javascript/
-        // https://getbootstrap.com/docs/4.0/components/forms/
-        // https://www.w3resource.com/jquery-exercises/part1/jquery-practical-exercise-9.php
-
         </script>
     </div><!-- end box-container -->
 
@@ -267,5 +263,12 @@
     </script>
     <script src="../shared/js/scripts.js"></script>
 </body>
+<!-- Help links:
+        // https://love2dev.com/blog/javascript-touppercase-tolowercase/
+        // https://danielmiessler.com/blog/a-list-of-different-case-types/
+        // https://flaviocopes.com/how-to-uppercase-first-letter-javascript/
+        // https://getbootstrap.com/docs/4.0/components/forms/
+        // https://www.w3resource.com/jquery-exercises/part1/jquery-practical-exercise-9.php
+     -->
 
 </html>
