--- a/tools/005-lowercase-converter/index.html
+++ b/tools/005-lowercase-converter/index.html
@@ -51,6 +51,7 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="more-notes">
                 <h2>How Does this Lower Case Conversion Tool Work?</h2>
                 <p>The text area automatically converts all the words to lowercase as you type text or paste text
@@ -67,6 +68,12 @@
                             tool</a></strong> that allows you to perform various conversion types in
                     a single tool.
                 </p>
+                <h2>What are Lowercase Letters?</h2>
+                <p>Lowercase letters are used to write names of things or objects. They are called "common nouns" and
+                    are
+                    therefore written in lowercase letters. In writing most letters are lower case. By convention in
+                    most programming languages, lowercase letters are always used for variable names.</p>
+                <p>These are the english alphabet lowercase letters:<br /><code>{ a b c d e f g h i j k l m n o p q r s t u v w x y z }</code></p>
             </div>
             <div class="notes">
                 <div class="image"></div>
