--- a/tools/006-uppercase-converter/index.html
+++ b/tools/006-uppercase-converter/index.html
@@ -17,7 +17,7 @@
     <title>Uppercase Converter - Convert to Uppercase Letters</title>
     <meta name="description"
         content="The Uppercase Converter is a Free Online Tool to Change your Text from Lowercase to UPPERCASE Letters or convert from other letter case types like title case or alternating case types." />
-        <meta name="keywords" content="uppercase converter, convert to uppercase, uppercase letter, lowercase to uppercase">
+    <meta name="keywords" content="uppercase converter, convert to uppercase, uppercase letter, lowercase to uppercase">
 </head>
 
 <body>
@@ -68,13 +68,26 @@
                             tool</a></strong> that allows you to perform various conversion types in
                     a single tool.
                 </p>
+                <h2>What are Uppercase Letters?</h2>
+                <p>
+                    Uppercase letters are used at the beginning of sentences, in the first letter of the first word. If
+                    in the middle of the sentence you have a proper name, names of people or animals, it must also be
+                    written in capital letters. They are also used in titles and acronyms. When a word or phrase is all
+                    written in capital letters, it can mean something important, a call for attention but it can also
+                    mean shouting.
+                </p>
+                <p>
+                    By convention in most programming languages, uppercase letters are used for contant names. </p>
+                <p>These are the english alphabet uppercase
+                    letters:<br /><code>{ A B C D E F G H I J K L M N O P Q R S T U V W X Y Z }</code></p>
             </div>
             <div class="notes">
                 <div class="image"></div>
                 <div class="message">
                     <p>
                         Send me your feedback about this <strong>uppercase converter tool</strong> and let me know if
-                        this web application works as you need it. If you need any improvement for this online tool, send me
+                        this web application works as you need it. If you need any improvement for this online tool,
+                        send me
                         a message in the comments section.
                     </p>
                     <p>
